# static-server

./: .gitignore  Cargo.toml
src/: main.rs
